--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,6 +1,12 @@
+html {
+	font-size: 0.521vw;
+}
 html,
 body {
 	height: 100%;
+	font-family: 'Montserrat', sans-serif;
+	line-height: 157%;
+	color: #1C1C1C;
 }
 
 .wrapper {
