--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,7 +8,6 @@ body {
 	line-height: 157%;
 	color: #1C1C1C;
 	background-color: #F5F5F5;
-	margin: 0;
 }
 
 .wrapper {
@@ -27,6 +26,27 @@ body {
 .container{
   max-width: 82vw;
   margin: 0 auto;
+}
+
+i {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icons' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.ic_home:before {
+  content: "\e900";
+	color: #F38120;
+	font-size: 2.2rem;
 }
 
 
