--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -14,6 +14,16 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
+  background-image: url('../images/bg-1x.jpg');
+  background-image: image-set(
+    "../images/bg-1x.webp" 1x,
+    "../images/bg-2x.webp" 2x,
+    "../images/bg-1x.jpg" 1x,
+    "../images/bg-2x.jpg" 2x,
+  );
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .main {
@@ -24,7 +34,7 @@ body {
 }
 
 .container{
-  max-width: 82vw;
+  max-width: 81.8vw;
   margin: 0 auto;
 }
 
