--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -53,12 +53,26 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.ic_home:before {
+.ic_viber:before {
   content: "\e900";
-	color: #F38120;
+  color: #fff;
+  font-size: 1.93rem;
+}
+.ic_whatsup:before {
+  content: "\e901";
+  color: #fff;
+  font-size: 2rem;
+}
+.ic_telegram:before {
+  content: "\e903";
+  color: #fff;
+  font-size: 1.4rem;
+}
+.ic_home:before {
+  content: "\e902";
+  color: #F38120;
 	font-size: 2.2rem;
 }
-
 
 
 
