--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,7 +10,7 @@
     display: flex;
     font-size: 1.4rem;
     padding: 4.4rem 0 3.8rem;
-    border-bottom: 1px solid rgba(28, 28, 28, 0.07);
+    border-bottom: 0.1rem solid rgba(28, 28, 28, 0.07);
     font-weight: 500;
   }
   &__home-ic {
@@ -75,7 +75,7 @@
     font-weight: 600;
     letter-spacing: 0.04em;
     line-height: 1.5rem;
-    border-bottom: 2px dotted #12C868;
+    border-bottom: 0.2rem dotted #12C868;
     padding-bottom: 0.2rem;
   }
   &__logo {
@@ -171,7 +171,7 @@
     color: #12C868;
     border: none;
     background: transparent;
-    border-bottom: 2px dotted #12C868;
+    border-bottom: 0.2rem dotted #12C868;
   }
 }
 
@@ -218,3 +218,117 @@
 a.header__tel {
   color: #1C1C1C;
 }
+
+.hero {
+  padding-top: 7.4rem;
+  &__inner {
+    display: flex;
+  }
+  &__benefits {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 0 1 14.33%;
+    padding: 4.1rem;
+    border-radius: 2rem;
+    background-color: #fff;
+    box-shadow: 0px 0px 7.5rem rgba(0, 0, 0, 0.03);
+    position: relative;
+    z-index: 1;
+    margin-right: 7.1rem;
+  }
+  &__benefits::after {
+    content: '';
+    position: absolute;
+    top: -2.2rem;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: -1;
+    border-radius: 2rem;
+    transform: skewY(6deg);
+  }
+  &__content {
+    padding-top: 1rem;
+    flex: 0 1 46.37%;
+  }
+  &__title {
+    font-weight: 300;
+    font-size: 5.5rem;
+    line-height: 155%;
+    max-width: 90%;
+    strong {
+      font-weight: 700;
+    }
+    &:not(:last-child) {
+      margin-bottom: 1.9rem;
+    }
+  }
+  &__subtitle {
+    font-weight: 400;
+    font-size: 3.2rem;
+    line-height: 3.9rem;
+    &:not(:last-child) {
+      margin-bottom: 4.5rem;
+    }
+  }
+  &__box {
+    display: flex;
+    flex-direction: column;
+    
+    &:not(:last-child) {
+      margin-bottom: 1.9rem;
+    }
+  }
+  &__buttons {
+    display: flex;
+    align-items: center;justify-content: space-between;
+    &:not(:last-child) {
+      margin-bottom: 3.8rem;
+    }
+  }
+  &__btn {
+    flex: 1 1 100%;
+    letter-spacing: 0.02em;
+    &:not(:last-child) {
+      margin-right: 1.8rem;
+    }
+  }
+  &__text {
+    font-size: 1.4rem;
+    letter-spacing: 0.02em;
+    &:not(:last-child) {
+      margin-bottom: 1.2rem;
+    }
+    b {
+      font-weight: 600;
+    }
+  }
+}
+
+.benefits {
+  &__list {
+    font-size: 1.4rem;
+  }
+  &__item {
+    text-align: center;
+    position: relative;
+    &:not(:last-child) {
+      margin-bottom: 4.8rem;
+      &::after{
+        content: '';
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('../images/shadow.png');
+      }
+    }
+    strong {
+      font-weight: 700;
+    }
+  }
+}
+
