--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,30 @@
 @import 'libs';
 @import 'global';
 
+a.header__tel {
+  color: #1C1C1C;
+}
+
+.btn--orange {
+  background-color: #F38120;
+  transition: all .2s ease-out;
+}
+
+.btn--green {
+  background-color: #12C868;
+  transition: all .2s ease-out;
+}
+
+@media (any-hover: hover) {
+  .btn--green:hover{
+    background-color: #21E27C;
+    cursor: pointer;
+  }
+  .btn--orange:hover{
+    background-color: #FD9C49;
+    cursor: pointer;
+  }
+}
 
 .header {
   &__menu {
@@ -18,6 +42,7 @@
      display: flex;
      align-items: center;
      justify-content: start;
+     transition: all .2s ease-out;
      @media (any-hover: hover) {
       &:hover {
         cursor: pointer;
@@ -75,8 +100,16 @@
     font-weight: 600;
     letter-spacing: 0.04em;
     line-height: 1.5rem;
+    color: #1C1C1C;
     border-bottom: 0.2rem dotted #12C868;
     padding-bottom: 0.2rem;
+    transition: all .2s ease-out;
+    @media (any-hover: hover) {
+      &:hover {
+        cursor: pointer;
+        opacity: .75;
+      }
+    }
   }
   &__logo {
     width: 17.45%;
@@ -130,10 +163,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all .2s ease-out;
+    @media (any-hover: hover) {
+      &:hover {
+        cursor: pointer;
+        opacity: .75;
+      }
+    }
     &--viber {
       background: #976FCC;
     }
-    &--whatsup {
+    &--whatsapp {
       background: #12C868;
     }
     &--telegram {
@@ -172,6 +212,13 @@
     border: none;
     background: transparent;
     border-bottom: 0.2rem dotted #12C868;
+    transition: all .2s ease-out;
+    @media (any-hover: hover) {
+      &:hover {
+        cursor: pointer;
+        opacity: .75;
+      }
+    }
   }
 }
 
@@ -215,10 +262,6 @@
   }
 }
 
-a.header__tel {
-  color: #1C1C1C;
-}
-
 .hero {
   padding-top: 7.4rem;
   &__inner {
@@ -228,6 +271,7 @@ a.header__tel {
     display: flex;
     flex-direction: column;
     align-items: center;
+    align-self: start;
     flex: 0 1 14.33%;
     padding: 4.1rem;
     border-radius: 2rem;
@@ -290,14 +334,38 @@ a.header__tel {
   }
   &__btn {
     flex: 1 1 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     letter-spacing: 0.02em;
+    font-weight: 600;
+    font-size: 1.4rem;
+    line-height: 2.2rem;
+    text-transform: uppercase;
+    box-shadow: inset 0px 0px 22px rgba(255, 255, 255, 0.25);
+    border-radius: 500px;
+    color: #fff;
+    padding: 2.7rem 0 2.9rem;
+    margin: 0;
+    border: none;
     &:not(:last-child) {
       margin-right: 1.8rem;
     }
+    p {
+      margin-right: 3.1rem;
+    }
+    span {
+      display: block;
+    }
+  }
+  &__box-inner {
+    display: flex;
   }
   &__text {
     font-size: 1.4rem;
     letter-spacing: 0.02em;
+    flex: 0 1 32.2%;
+    text-align: center;
     &:not(:last-child) {
       margin-bottom: 1.2rem;
     }
@@ -331,4 +399,163 @@ a.header__tel {
     }
   }
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 100;
+  overflow: auto;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s ease-out;
+  &.visible {
+    opacity: 1;
+    visibility: visible;
+  }
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;
+  }
+  &__body {
+    background-image: url('../images/modal-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    position: relative;
+    padding: 7rem 9.7rem 9.3rem;
+  }
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 35.6rem;
+  }
+  &__close {
+    position: absolute;
+    top: 4.5rem;
+    right: 4.7rem;
+    @media (any-hover: hover) {
+      &:hover {
+        cursor: pointer;
+        .ic_close:before {
+          color: #000000;
+          opacity: .75;
+        }
+      }
+    }
+  }
+  &__title {
+    letter-spacing: 0.02em;
+    font-weight: 500;
+    font-size: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    display: block;
+    &:not(:last-child) {
+      margin-bottom: 1.4rem;
+    }
+    span {
+      display: block;
+      margin-bottom: 1.6rem;
+    }
+  }
+  &__text {
+    letter-spacing: 0.02em;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    text-align: center;
+    color: #000000;
+    &:not(:last-child) {
+      margin-bottom: 2.4rem;
+    }
+  }
+  &__shedule {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    color: #000000;
+    opacity: .75;
+    &:not(:last-child) {
+      margin-bottom: 2.8rem;
+    }
+  }
+  &__form {
+    width: 100%;
+  }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  &__label {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    color: #000000;
+    opacity: 0.75;
+    &:not(:last-child) {
+      margin-bottom: 1.2rem;
+    }
+  }
+  &__tel {
+    font-size: 1.8rem;
+    line-height: 3.7rem;
+    letter-spacing: 0.02em;
+    padding: 2.4rem 8.4rem 2.4rem 4.6rem;
+    border-radius: 500px;
+    &::placeholder {
+      color: #A7A7A7;
+    }
+    &:not(:last-child) {
+      margin-bottom: 2.4rem;
+    }
+  }
+  &__btn {
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 2.1rem;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    border: none;
+    display: flex;
+    padding: 3.2rem 8.7rem;
+    margin: 0;
+    box-shadow: inset 0px 0px 17px rgba(255, 255, 255, 0.25);
+    border-radius: 500px;
+    .ic_arrow {
+      transform: rotate(45deg);
+    }
+    p {
+      margin-right: 1.8rem;
+    }
+    &:not(:last-child) {
+      margin-bottom: 1.9rem;
+    }
+  }
+  &__inner {
+    display: flex;
+    align-items: center;
+    &:not(:last-child) {
+      margin-bottom: 1.9rem;
+    }
+  }
+  &__checkbox {
+    &:not(:last-child) {
+      margin-right: 1.9rem;
+    }
+  }
+  &__disclaimer {
+    font-weight: 500;
+    font-size: 1.2rem;
+    line-height: 2.1rem;
+    a {
+      color: #F38120;
+    }
+  }
+}
+
 
