--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -555,7 +555,9 @@ a.header__tel {
     font-weight: 500;
     font-size: 1.2rem;
     line-height: 2.1rem;
+    margin-left: 3.7rem;
     user-select: none;
+    position: relative;
     a {
       color: #F38120;
     }
@@ -563,10 +565,9 @@ a.header__tel {
   &__disclaimer::before {
     content: '';
     position: absolute;
-    
-    // float: left;
-    margin-right: 1.9rem;
-    // display: inline-flex;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: -3.7rem;
     width: 1.8rem;
     height: 1.8rem;
     border: 0.2rem solid #F38120;
