--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -31,6 +31,11 @@ body {
   background-position: center;
 }
 
+.r {
+  min-height: 100vh;
+  background-color:chartreuse;
+}
+
 .main {
 	flex: 1 0 auto;
 }
@@ -41,6 +46,13 @@ body {
 .container{
   max-width: 81.8vw;
   margin: 0 auto;
+  @media (max-width: 1023px) {
+    max-width: 86.25vw;
+  }
+}
+
+body.lock {
+  overflow: hidden;
 }
 
 i {
