--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -36,6 +36,11 @@ a.header__tel {
     padding: 4.4rem 0 3.8rem;
     border-bottom: 0.1rem solid rgba(28, 28, 28, 0.07);
     font-weight: 500;
+    .header__descr,
+    .header__price,
+    .header__social {
+      display: none;
+    }
   }
   &__home-ic {
      margin-right: 10rem;
@@ -219,6 +224,54 @@ a.header__tel {
         opacity: .75;
       }
     }
+  }
+  &__burger{
+    @media (min-width: 1024px) {
+      display: none;
+    }
+    display: block;
+    position: relative;
+    cursor: pointer;
+    width: 25px;
+    height: 20px;
+    span {
+      transition: all .6s ease;
+      position: absolute;
+      left: 0;
+      background-color: #1C1C1C;
+      width: 100%;
+      height: 2px;
+      top: 9px;
+      border-radius: 1px;
+    }
+  }
+  &__burger::after,
+  &__burger::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    background-color: #1C1C1C;
+    width: 100%;
+    height: 2px;
+    transition: all .6s ease;
+    border-radius: 1px;
+  }
+  &__burger::before {
+    top: 0;
+  }
+  &__burger::after {
+    bottom: 0;
+  }
+  &__burger.active::before {
+    transform: rotate(45deg);
+    top: 9px;
+  }
+  &__burger.active::after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+  }
+  &__burger.active span {
+    transform: scale(0);
   }
 }
 
@@ -591,4 +644,4 @@ a.header__tel {
   }
 }
 
-
+@import 'tablet';
