--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -445,11 +445,17 @@ a.header__tel {
         width: 100%;
         height: 100%;
         background-image: url('../images/shadow.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
       }
     }
     strong {
       font-weight: 700;
     }
+  }
+  &__text {
+    display: none;
   }
 }
 
@@ -645,3 +651,4 @@ a.header__tel {
 }
 
 @import 'tablet';
+@import 'media-burger';
