--- a/app/scss/_media-burger.scss
+++ b/app/scss/_media-burger.scss
@@ -1,10 +1,15 @@
 @media (max-width: 1023px) {
   html {
-    
+    font-size: 10px;
   }
   .header {
-    font-size: 1.3vmin;
     &__menu {
+      .header__descr,
+      .header__price,
+      .header__social {
+        display: block;
+        // display: flex;
+      }
       position: fixed;
       top: 0;
       right: -100%;
@@ -13,21 +18,18 @@
       height: 100vh;
       background-color: #EDF2F5;
       padding: 16.3rem 2rem;
-      font-size: 1.6rem;
+      font-size: 1.6em;
+      display: flex;
       flex-direction: column;
       align-items: center;
       transition: all .3s ease-out;
       overflow: auto;
-      .header__descr,
-      .header__price,
-      .header__social {
-        display: block;
-      }
       .header__descr {
         &:not(:last-child) {
           margin-bottom: 4rem;
         }
-        flex: 0 1 75%;
+        flex: 0 1 auto;
+        width: 75%;
         p {
           display: inline;
           &:not(:last-child) {
