--- a/app/scss/_media-burger.scss
+++ b/app/scss/_media-burger.scss
@@ -1,7 +1,7 @@
 @media (max-width: 1023px) {
-  // html {
-  //   font-size: 10px;
-  // }
+  html {
+    // font-size: 3.13vw;
+  }
   .header {
     &__menu {
       .header__descr,
