--- a/app/scss/_mobile.scss
+++ b/app/scss/_mobile.scss
@@ -68,9 +68,23 @@ and (orientation: portrait) {
       transform: translate(-50%, 75%);
       padding: 0rem 0 2.6rem 2.3rem;
       align-items: flex-start;
+      transition: all .3s ease-out;
     }
     &__benefits::after {
       top: -1.5rem;
+    }
+    &__benefits.show {
+      transform: translate(-50%, -5%);
+      .benefits__close-icon {
+        transform: rotate(-45deg);
+        width: 1.2rem;
+      }
+      .benefits__close-icon + .benefits__close-icon {
+        transform: rotate(45deg);
+      }
+      .benefits__text {
+        display: none;
+      }
     }
     &__content {
       flex: 0 1 100%;
@@ -137,6 +151,7 @@ and (orientation: portrait) {
     }
     &__close {
       position: absolute;
+      cursor: pointer;
       right: 1.4rem;
       width: 3.3rem;
       height: 3.3rem;
@@ -145,17 +160,42 @@ and (orientation: portrait) {
       border-radius: 50%;
       display: flex;
       justify-content: center;
-      align-items: center;
-      span {
-        display: block;
-        background: #fff;
-        height: 0.2rem;
-        width: 0.9rem;
-      }
-      span:last-child {
-        position: absolute;
-        transform: rotate(90deg);
-      }
+      align-items: center;     
+    }
+    &__close-icon {
+      display: block;
+      background: #fff;
+      height: 0.2rem;
+      width: 0.9rem;
+      transition: all .3s ease-out;
+    }
+    &__close-icon + .benefits__close-icon {
+      position: absolute;
+      transform: rotate(90deg);
+    }
+    &__pulse-ring {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: auto;
+      width: auto;
+      border-radius: 50%;
+      border: 0.2rem solid #F38120;
+      border-bottom: none;
+      border-left: none;
+      // border-top: none;
+      animation-duration: 2.0s;
+      animation-name: pulse-1;
+      animation-timing-function: cubic-bezier(.06,.78,.79,.92);
+      animation-iteration-count: infinite;
+    }
+    &__pulse-ring:nth-child(2) {
+      animation-name: pulse-2;
+    }
+    &__pulse-ring:nth-child(3) {
+      animation-name: pulse-3;
     }
     &__text {
       display: block;
@@ -166,4 +206,43 @@ and (orientation: portrait) {
       
     }
   }
+}
+
+@keyframes pulse-1 {
+  from {
+    opacity: 1;
+    transform: scale(0.9, 0.9);
+  }
+  to {
+    opacity: 0;
+    transform: scale(1.3, 1.3);
+  }
+}
+@keyframes pulse-2 {
+  from {
+    opacity: 1;
+    transform: scale(0.8, 0.8);
+  }
+  to {
+    opacity: 0;
+    transform: scale(1.5, 1.5);
+  }
+}
+@keyframes pulse-3 {
+  from {
+    opacity: 1;
+    transform: scale(0.8, 0.8);
+  }
+  to {
+    opacity: 0;
+    transform: scale(1.7, 1.7);
+  }
+}
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 768px)
+and (orientation: landscape) {
+
+ 
 }
