--- a/app/scss/_media-burger.scss
+++ b/app/scss/_media-burger.scss
@@ -79,7 +79,7 @@
       align-self: start;
       position: relative;
       z-index: 100;
-      flex: 0 1 27.2%;
+      flex: 0 1 auto;
     }
     &__descr {
       display: none;
