--- a/app/scss/_tablet.scss
+++ b/app/scss/_tablet.scss
@@ -10,6 +10,8 @@ and (orientation: landscape) {
 
   .hero {
     font-size: 0.521vw;
+    padding-bottom: 2rem;
+    padding-top: 4rem;
     .hero__benefits {
       flex: 0 1 20%;
 
