--- a/app/scss/_mobile.scss
+++ b/app/scss/_mobile.scss
@@ -367,11 +367,18 @@ and (max-device-width: 768px)
 and (orientation: landscape  ) {
 
  html {
-  font-size: .83vh;
+  font-size: .83vmax;
  }
- .header {
+  .header {
   &__logo {
     flex: 0 1 auto;
   }
+  }
+  .hero {
+    padding-bottom: 2rem;
+    padding-top: 4rem;
+    &__content {
+      flex: 0 1 auto;
+    }
   }
 }
