--- a/app/scss/_tablet.scss
+++ b/app/scss/_tablet.scss
@@ -47,9 +47,13 @@ and (orientation: landscape) {
 
 /* tablet (portrait) */
 @media only screen
-and (min-device-width: 768px)
+and (min-device-width: 767px)
 and (max-device-width: 1024px)
 and (orientation: portrait) {
+
+  html {
+    font-size: 1.93vmax;
+  }
 
 }
 
