tablet burger fix

--- a/app/scss/_mobile.scss
+++ b/app/scss/_mobile.scss
@@ -1,4 +1,4 @@
-/* mobile (portrait) */
+/* mobile + tablet (portrait) */
 @media only screen
 and (min-device-width: 320px)
 and (max-device-width: 1024px)
@@ -361,6 +361,7 @@ and (orientation: portrait) {
   }
 }
 
+/* mobile (landscape) */
 @media only screen
 and (min-device-width: 320px)
 and (max-device-width: 768px)
