--- a/app/scss/_tablet.scss
+++ b/app/scss/_tablet.scss
@@ -1,7 +1,7 @@
 /* tablet (landscape) */
 @media only screen
 and (min-device-width: 768px)
-and (max-device-width: 1024px)
+and (max-device-width: 1023px)
 and (orientation: landscape) {
 
   html {
@@ -27,7 +27,7 @@ and (orientation: landscape) {
   .menu {
     &__item {
       &:not(:last-child) {
-        margin-right: 4rem;
+        // margin-right: 4rem;
       }
     }
   }
